--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\gpf_f\\ProgettiPython\\env-django\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\forteg\\Desktop\\Buff\\Django\\env-django\\Scripts\\python.exe"
 }
