--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,58 @@
-asgiref==3.3.4
-autopep8==1.5.7
-dj-database-url==0.5.0
-Django==3.2
-django-autocomplete-light==3.8.2
-django-crispy-forms==1.11.2
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
+asgiref==3.8.1
+async-timeout==4.0.3
+attrs==24.2.0
+autopep8==2.3.1
+beautifulsoup4==4.12.3
+certifi==2024.8.30
+chardet==5.2.0
+crispy-bootstrap4==2024.1
+deprecation==2.1.0
+dj-database-url==2.2.0
+Django==5.1.1
+django-autocomplete-light==3.11.0
+django-bootstrap4==24.3
+django-crispy-forms==2.3
 django-dotenv==1.4.2
-gunicorn==20.1.0
-psycopg2-binary==2.8.6
-pycodestyle==2.7.0
-pytz==2021.1
+exceptiongroup==1.2.2
+frozenlist==1.4.1
+gotrue==2.8.0
+gunicorn==23.0.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.5
+httpx==0.27.2
+hyperframe==6.0.1
+idna==3.8
+multidict==6.0.5
+packaging==24.1
+pillow==10.4.0
+postgrest==0.16.11
+psycopg2-binary==2.9.9
+pycodestyle==2.12.1
+pydantic==2.9.0
+pydantic_core==2.23.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+realtime==2.0.2
+reportlab==4.2.2
 six==1.16.0
-sqlparse==0.4.1
+sniffio==1.3.1
+soupsieve==2.6
+sqlparse==0.5.1
+storage3==0.7.7
+StrEnum==0.4.15
+supabase==2.7.4
+supafunc==0.5.1
 toml==0.10.2
-whitenoise==5.2.0
+tomli==2.0.1
+typing_extensions==4.12.2
+tzdata==2024.1
+websockets==12.0
+whitenoise==6.7.0
+yarl==1.10.0
